集成mybatis，尝试性写了几个mapper，建好了实体类！

--- a/接口文档/用户操作接口.md
+++ b/接口文档/用户操作接口.md
@@ -18,14 +18,13 @@
 
 |      参数名       |   参数含义   |                           参数要求                           |
 | :---------------: | :----------: | :----------------------------------------------------------: |
-|      Long id      | ID 唯一标识  |                必须为空，该参数由**后端**生成                |
-|    String name    |    用户名    |              不能为空，该参数必须由**用户**指定              |
-|    String pwd     |   用户密码   |              不能为空，该参数必须由**用户**指定              |
+|    Integer id     | ID 唯一标识  |                必须为空，该参数由**后端**生成                |
+|  String username  |    用户名    |              不能为空，该参数必须由**用户**指定              |
+|  String password  |   用户密码   |              不能为空，该参数必须由**用户**指定              |
 |  String nickname  |   用户昵称   | 不能为空，该参数由**前端**决定是否由用户输入，或随机从词库生成 |
-|  Boolean status   |   账户状态   |         注册时必须为空，由**后端**默认生成为激活状态         |
+|  Integer enabled  |   账户状态   |         注册时必须为空，由**后端**默认生成为激活状态         |
 | List<Role> roles  | 用户角色列表 |             必须为空，由**后端**指定默认普通用户             |
 |   String email    |  用户email   |              不能为空，该参数必须由**用户**指定              |
-|    String tel     |   用户电话   |                           可以为空                           |
 | Timestamp regTime |   注册时间   |                   必须为空，由**后端**生成                   |
 
 ### 应答参数列表
@@ -51,11 +50,10 @@
 
 ### 请求参数列表
 
-|     参数名     | 参数含义 |         参数要求         |
-| :------------: | :------: | :----------------------: |
-|  String name   |  用户名  | 不能为空，由**用户**指定 |
-|   String pwd   | 用户密码 | 不能为空，由**用户**指定 |
-| String captcha |  验证码  | 不能为空，由**用户**指定 |
+|     参数名      | 参数含义 |         参数要求         |
+| :-------------: | :------: | :----------------------: |
+| String username |  用户名  | 不能为空，由**用户**指定 |
+| String password | 用户密码 | 不能为空，由**用户**指定 |
 
 ### 应答参数列表
 
@@ -79,15 +77,144 @@
 
 ### 请求参数列表
 
-| 参数名 | 参数含义 | 参数要求 |
-| :----: | :------: | :------: |
-|        |          |          |
-|        |          |          |
-|        |          |          |
+|            参数名            | 参数含义 |                参数要求                 |
+| :--------------------------: | :------: | :-------------------------------------: |
+| **@Pathvariable** Integer id | 用户的id | 符合id要求，注意这里用**@Pathvariable** |
+|                              |          |                                         |
 
 
 
 ### 应答参数列表
 
+| 参数名  | 参数含义 | 参数要求 |
+| :-----: | :------: | :------: |
+| status  |   状态   |          |
+| message |          |          |
+|   obj   |          |          |
 
 
+
+## 用户修改
+
+### 请求路径
+
+* /user/{id}
+
+### 请求方法
+
+* POST
+
+### 请求参数列表
+
+|            参数名            | 参数含义  |                           参数要求                           |
+| :--------------------------: | :-------: | :----------------------------------------------------------: |
+| **@Pathvariable** Integer id |  用户id   |                           路径参数                           |
+|       String username        |  用户名   |              不能为空，该参数必须由**用户**指定              |
+|       String password        | 用户密码  |              不能为空，该参数必须由**用户**指定              |
+|       String nickname        | 用户昵称  | 不能为空，该参数由**前端**决定是否由用户输入，或随机从词库生成 |
+|       Integer enabled        | 账户状态  |                       1为激活 0为禁用                        |
+|         String email         | 用户email |              不能为空，该参数必须由**用户**指定              |
+|          String tel          | 用户电话  |                           可以为空                           |
+
+### 应答参数列表
+
+|     参数名     |     参数含义     | 参数要求 |
+| :------------: | :--------------: | :------: |
+| Integer status | 1：成功；0：失败 |          |
+| String message |     失败信息     |          |
+|   Object obj   |                  |          |
+
+## 获取所有用户
+
+### 请求路径
+
+* /users
+
+### 请求方法
+
+* GET
+* POST
+
+### 请求参数列表
+
+* 无
+
+### 应答参数列表
+
+* List<User user> users 对应的JSON字符串
+
+## 批量删除用户
+
+### 请求路径
+
+* /users
+
+### 请求方法
+
+* DELETE
+
+### 请求参数列表
+
+* List<Long id>  ids
+
+### 应答参数列表
+
+* 常规的 ResponseBean
+
+## 根据用户id修改状态
+
+### 请求路径
+
+* /user/{id}/status
+
+### 请求方法
+
+* POST
+* PUT
+
+### 请求参数列表
+
+|           参数名            | 参数含义 | 参数要求 |
+| :-------------------------: | :------: | :------: |
+| **@Pathvaibale** Integer id |    id    |          |
+|       Integer enabled       | 用户状态 |          |
+
+### 应答参数列表
+
+* 普通
+
+
+
+## 根据用户id修改密码
+
+### 请求路径
+
+* /user/{id}/pwd
+
+### 请求方法
+
+* PUT
+* POST
+
+### 请求参数列表
+
+|        参数名         | 参数含义 | 参数要求 |
+| :-------------------: | :------: | :------: |
+| @Pathvariable Long id |    id    |          |
+|     String oldPwd     |  旧密码  |          |
+|     String newPwd     |  新密码  |          |
+|    String captcha     |  验证码  |          |
+
+### 应答参数列表
+
+* 还是那个对象，特此说明下status对应的含义
+
+| status |     message      |
+| :----: | :--------------: |
+|   1    |     修改成功     |
+|   0    |     未知错误     |
+|   -1   |    旧密码错误    |
+|   -2   | 新密码格式不正确 |
+|   -3   |    服务器错误    |
+|   -4   |     强度不够     |
+|  ...   |       ...        |
