完成了现有表的所有mapper的自动生成，还没写注释

--- a/接口文档/用户操作接口.md
+++ b/接口文档/用户操作接口.md
@@ -2,10 +2,6 @@
 
 ## 用户注册
 
-### 接口描述
-
-该接口是用户注册的接口，前端提交JSON数据，后端处理并返回结果
-
 ### 请求路径
 
 * /user/signup
@@ -31,9 +27,21 @@
 
 |     参数名     |                     参数含义                     |         参数要求         |
 | :------------: | :----------------------------------------------: | :----------------------: |
-| Integer status |           1：成功 ；0：失败；-1：其它            | 必须为左边列出的几个整数 |
+| Integer status |                       如下                       | 必须为左边列出的几个整数 |
 | String message |                失败则为失败的原因                |  若status为0则不能为空   |
-|   Object obj   | 待定，用于那些既要返回状态，又要返回对象的预留位 |         一般为空         |
+|   Object obj   | 待定，用于那些既要返回状态，又要返回对象的预留位 |            空            |
+
+### status（待开发）
+
+| status |         含义         |
+| :----: | :------------------: |
+|   1    |       注册成功       |
+|   -1   |  注册失败；未知错误  |
+|   0    | 注册失败；用户名重复 |
+|   -2   |                      |
+|  ....  |                      |
+|        |                      |
+|        |                      |
 
 
 
@@ -42,7 +50,6 @@
 ### 请求路径
 
 * /user/login
-* /login
 
 ### 请求方法
 
@@ -54,6 +61,7 @@
 | :-------------: | :------: | :----------------------: |
 | String username |  用户名  | 不能为空，由**用户**指定 |
 | String password | 用户密码 | 不能为空，由**用户**指定 |
+| String captcha  |  验证码  | 不能为空，由**用户**指定 |
 
 ### 应答参数列表
 
@@ -65,7 +73,7 @@
 
 
 
-## 用户销毁
+## 删除用户
 
 ### 请求路径
 
@@ -91,6 +99,14 @@
 | status  |   状态   |          |
 | message |          |          |
 |   obj   |          |          |
+
+### status
+
+| status | 含义 |
+| :----: | :--: |
+|   1    | 成功 |
+|        |      |
+|        |      |
 
 
 
@@ -124,11 +140,21 @@
 | String message |     失败信息     |          |
 |   Object obj   |                  |          |
 
+### status
+
+| status | 含义 |
+| :----: | :--: |
+|   1    | 成功 |
+|        |      |
+|        |      |
+
+
+
 ## 获取所有用户
 
 ### 请求路径
 
-* /users
+* /user/all
 
 ### 请求方法
 
@@ -143,11 +169,19 @@
 
 * List<User user> users 对应的JSON字符串
 
+### status
+
+| status | 含义 |
+| :----: | :--: |
+|   1    | 成功 |
+|        |      |
+|        |      |
+
 ## 批量删除用户
 
 ### 请求路径
 
-* /users
+* /user/selected
 
 ### 请求方法
 
@@ -155,11 +189,19 @@
 
 ### 请求参数列表
 
-* List<Long id>  ids
+* List<Integer id>  ids
 
 ### 应答参数列表
 
 * 常规的 ResponseBean
+
+### status
+
+| status | 含义 |
+| :----: | :--: |
+|   1    | 成功 |
+|        |      |
+|        |      |
 
 ## 根据用户id修改状态
 
@@ -177,11 +219,19 @@
 |           参数名            | 参数含义 | 参数要求 |
 | :-------------------------: | :------: | :------: |
 | **@Pathvaibale** Integer id |    id    |          |
-|       Integer enabled       | 用户状态 |          |
+|       Integer status        | 用户状态 |          |
 
 ### 应答参数列表
 
 * 普通
+
+### status
+
+| status | 含义 |
+| :----: | :--: |
+|   1    | 成功 |
+|        |      |
+|        |      |
 
 
 
@@ -207,7 +257,9 @@
 
 ### 应答参数列表
 
-* 还是那个对象，特此说明下status对应的含义
+* ResponseBean
+
+### status
 
 | status |     message      |
 | :----: | :--------------: |
